--- a/src/app/employees/employee/employee.component.html
+++ b/src/app/employees/employee/employee.component.html
@@ -1,4 +1,4 @@
-<form #form="ngForm" autocomplete="off">
+<form #form="ngForm" (submit)="onSubmit(form)" autocomplete="off">
   <div class="form-group">
     <label>Full Name</label>
     <input name="FullName" #FullName="ngModel" [(ngModel)]="service.formData.FullName" class="form-control" required/>
