--- a/src/app/employees/employee-list/employee-list.component.html
+++ b/src/app/employees/employee-list/employee-list.component.html
@@ -1,3 +1,10 @@
-<p>
-  employee-list works!
-</p>
+<table class="table table-hover">
+  <tr *ngFor="let item of service.list">
+    <td (click)="getEmployeeByID(item)">
+      [{{ item.EMPCode }}]-{{ item.FullName }}
+    </td>
+    <td (click)="getEmployeeByID(item)">{{ item.Position }}</td>
+    <td (click)="getEmployeeByID(item)">{{ item.Mobile }}</td>
+    <td><button class="btn btn-sm btn-outline-danger">X</button></td>
+  </tr>
+</table>
