Full crud operation

--- a/src/app/employees/employee-list/employee-list.component.html
+++ b/src/app/employees/employee-list/employee-list.component.html
@@ -5,6 +5,13 @@
     </td>
     <td (click)="getEmployeeByID(item)">{{ item.Position }}</td>
     <td (click)="getEmployeeByID(item)">{{ item.Mobile }}</td>
-    <td><button class="btn btn-sm btn-outline-danger">X</button></td>
+    <td>
+      <button
+        (click)="deleteEmployee(item.id)"
+        class="btn btn-sm btn-outline-danger"
+      >
+        X
+      </button>
+    </td>
   </tr>
 </table>
