--- a/src/app/employees/employee/employee.component.html
+++ b/src/app/employees/employee/employee.component.html
@@ -59,14 +59,14 @@
         This field is required..
       </div>
     </div>
-    <div class="form-control">
-      <button
-        type="submit"
-        [disabled]="form.invalid"
-        class="btn btn-lg btn-block"
-      >
-        Submit
-      </button>
-    </div>
+
+    <button
+      class="btn btn-info "
+      type="submit"
+      [disabled]="form.invalid"
+      class="btn btn-lg btn-block"
+    >
+      Submit
+    </button>
   </div>
 </form>
