--- a/src/styles.css
+++ b/src/styles.css
@@ -1,27 +1,29 @@
-/* You can add global styles to this file, and also import other style files */
-.form-group>input{
-    font-weight: bolder
+.form-group > input {
+  font-weight: bolder;
 }
-.form-group>label{
-    font-weight: lighter
+.form-group > label {
+  font-weight: lighter;
 }
-button [type="submit"]{
-    background-color: #67dfd4;
-    color: #fff
+
+button[type="submit"] {
+  background-color: #67dfd4;
+  color: #fff;
 }
-.jumbotron{
-    background-color: #fff;
-    padding-top: 32px;
+.jumbotron {
+  background-color: #fff;
+  padding-top: 32px;
 }
-table tr:hover{
-    cursor: pointer;
+
+table tr:hover {
+  cursor: pointer;
 }
-input.ng-touched.ng-invalid{
-    border-color: #dc3545
+
+input.ng-touched.ng-invalid {
+  border-color: #dc3545;
 }
-div.validation-error{
-    width: 100%;
-    margin-top: .25rem;
-    font-size: 80%;
-    color: #dc3545
+div.validation-error {
+  width: 100%;
+  margin-top: 0.25rem;
+  font-size: 80%;
+  color: #dc3545;
 }
